# Projet-Tronc-commun

./: .gitignore  README.md  Ressources.txt
Totally_Quick_Jolt_Racing/: .gitignore  CMakeLists.txt  Makefile  game_config.txt
Totally_Quick_Jolt_Racing/Input/: .gitignore  CMakeLists.txt
Totally_Quick_Jolt_Racing/Input/inputapp/: CMakeLists.txt  donnees.h  get_input.cpp  get_input.h  info.md  input_HID.c  input_SDL.c  share_val.h
Totally_Quick_Jolt_Racing/assets/cactus/: cactus.mtl
Totally_Quick_Jolt_Racing/assets/car/: car_old.mtl
Totally_Quick_Jolt_Racing/assets/checkpoint/: Checkpoint_Arch.mtl
Totally_Quick_Jolt_Racing/assets/loly/: lolipops_1.mtl
Totally_Quick_Jolt_Racing/assets/mini_map/: Mud_forest.png~  candy_road.png~
Totally_Quick_Jolt_Racing/assets/palmier/: palmier.mtl
Totally_Quick_Jolt_Racing/assets/tree/: tree.mtl
Totally_Quick_Jolt_Racing/shaders/depth_map/: car_depth_map.vert.glsl  depth_map.vert.glsl
Totally_Quick_Jolt_Racing/shaders/instancing/: instancing-grass.vert.glsl  instancing-tree.vert.glsl  instancing.frag.glsl
Totally_Quick_Jolt_Racing/shaders/mesh_with_shadow/: cactus_instancing_with_shadow.vert.glsl  mesh_with_shadow.frag.glsl  (+4 more)
Totally_Quick_Jolt_Racing/src/: deformable.cpp  deformable.hpp  driving_car.cpp  driving_car.hpp  environment.cpp  environment.hpp  main.cpp  map.cpp  map.hpp  physic.cpp  physic.hpp  scene.cpp  scene.hpp  shadow_mapping.cpp  shadow_mapping.hpp  simulation.cpp  simulation.hpp  spatial_partitionning.cpp  spatial_partitionning.hpp  stb_image.h  terrain.cpp  terrain.hpp
cgp/: .gitignore
(+8 files in other folders)
